# browser-agent

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml
browser_agent_final/: __init__.py  browser_tools.py  classes.py  core_agent.py  session.py
tests/integration/: conftest.py  run_observe_page_test.py  test_agent_integration.py  test_browser_session_integration.py  test_browser_tools_integration.py  test_observe_page_strategy_integration.py  test_workflow_integration.py
tests/unit/: test_browser_tools.py  test_classes.py  test_core_agent.py  test_core_agent_observe_strategy.py  test_session.py
